# parts-mcp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  LICENSE.md  README.md  SECURITY.md  main.py  package.json  pyproject.toml  server.json  smithery.yaml
.github/workflows/: ci.yml  commit-notification.yml  release.yml  version-bump.yml
docs/: HOW-TO.md
parts_mcp/: __init__.py  __main__.py  auth.py  config.py  events.py  server.py
parts_mcp/internal/: project_config.py
parts_mcp/prompts/: __init__.py  templates.py
parts_mcp/resources/: __init__.py  parts.py  suppliers.py
parts_mcp/tools/: __init__.py  assembly_pipeline.py  cad.py  cli.py  convert.py  datasheet.py  design_pipeline.py  dfm_pipeline.py  doc_safelist.py  docs.py  ecn.py  eco.py  kicad.py  kicad_ctrl.py  kicad_sch.py  logistics_pipeline.py  manufacturing.py  preferences.py  project.py  quality_pipeline.py  render.py  sales_pipeline.py  sch_repair.py  search.py  sourcing.py  supply_chain_pipeline.py  test_pipeline.py  wip.py
parts_mcp/utils/: __init__.py  _ttl_cache.py  api_client.py  bom_parser.py  cache.py  component_matcher.py  footprint_matcher.py  kicad_utils.py  netlist_parser.py  pcb_highlight.py  roles.py  template_router.py  value_parser.py
scripts/: release.sh  send-commit-notification.ts
src/: index.ts
tests/: __init__.py  conftest.py
tests/fixtures/api_responses/: inventory.json  part_details.json  search_stm32.json
tests/fixtures/sample_boms/: altium_bom.csv  kicad_bom.csv
tests/integration/: __init__.py  test_render_pipeline.py
tests/unit/: __init__.py  test_api_client.py  test_bom_parser.py  test_cache.py  test_component_matcher.py  test_footprint_matcher.py  test_kicad_tools.py  test_kicad_utils.py  test_sch_repair_tools.py  test_template_router.py  test_value_parser.py  test_wip_tools.py
